lab1/Test/L1-A-9-87.cmm
int M7DrNx65KxlU45ENuN6 ( struct {
}lskKUVSBkwoFxlu , int vpwF69ALtEOa5fD8jbH ) {
  float b [ 1336060062 ] , iSDCE = _HNRxGgWrUjslNUQ5Q 
    || IJjmidwX53de1 && vShH + L * XPZ73Zf [ XIdmYflu2j0YgGVQ2R8 
    = uB2mK8Cv7Ao >= ( a && oC6heSA91Ta == d23PEGdPr - 
    cNjqhO20P / bk5iKFaCeUJXT5T9i7m ( joopKZ_n139JY9Z 
    || DgCG6aAIG > RAoYwgn * O6uv1uv8sBkRInksj [ D2Do 
    != PyWjsD_wo4LM8EBjsa ( j0Ja , o = UK8Q0FOC2C7v = 
    DYfswOGlUzFf_ = aD0q || Nuk_aaY6uI5H7_PC6i < pfmQW 
    ) * - KYHu * * - ! hgYlSMw3JdlTk <= 1967012682.743368692 
    . RppuUr_In * 561364601 ] * GNXiocFIu5KBCB7fvJ ) ) 
    ] . RYXTcZGBCHRuPGxQjo / - ! VcbO30Is ( ) ;
}
struct fFE6xuWOPfabI4FDWU 
struct czB9NVSSUFp {
}vzX 
;
int WyRY4QKn ( ) {
  while ( ii97 )   fWn3pSBFmoR0HrmlEY ;

  if ( kuVA0LoUuKOI )   return a ;
else   XL2foK4ejt702jZDVlmi ;

}
int ztye6kyWVoH8rSuy1l ( ) {
  if ( QNmJ4mRq4UYM_ ) {
  }
}
int F12AsCIwqHY , YAm8MoO3 

;
int t_UWjaKLUi4MLxS43z9M ( ) {
  FJnF8gQoJ5LpxzrSG3 ;
}
int ;
int oLV6YW0n ( ) {
  if ( V4o4 )   SHBTZl ;
else   if ( eJQxNl6DUI_PhfBWeY7 )   Fvqkdb7ulQF7hJ 
    ;


}
